<resources>
    <string name="app_name">SportWin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Onesoft</string>
    <string name="nav_header_subtitle">onesoft@GameLab</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chat_admin">CHAT-ADMIN</string>
    <string name="premium">PREMIUM</string>
    <string name="archives">ARCHIVES</string>
    <string name="free">FREE-TIPS</string>
    <string name="lg">lg</string>
    <string name="archive">archive</string>
    <string name="premiums">premiums</string>
    <string name="chat">chat</string>
    <string name="subscribe_win_big">Subscribe,Win Big</string>
    <string name="help">Help?</string>
    <string name="tomorrow_is_better">Tomorrow is better</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="to_join_whatsapp">To join_WhatsApp</string>
    <string name="chartadmin">ChartAdmin</string>

</resources>
